[metadata]
name = hierarqcal
version = 0.2.0

[options]
packages = 
    hierarqcal
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
    numpy
    sympy
    networkx
    matplotlib
    ipykernel
    jupyterlab

[options.extras_require]
cirq = cirq
       matplotlib<=3.5.1 # Otherwise there's an annoying findfont warning for arial
pennylane = pennylane
qiskit = qiskit[visualization]