[metadata]
name = hierarqcal
version = 0.2.4
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = 
    hierarqcal
    hierarqcal.cirq
    hierarqcal.pennylane
    hierarqcal.qiskit
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
    numpy
    sympy
    networkx
    matplotlib
    ipykernel
    jupyterlab

[options.extras_require]
cirq = cirq
       matplotlib<=3.5.1 # Otherwise there's an annoying findfont warning for arial
pennylane = pennylane
qiskit = qiskit[visualization]