[metadata]
name = hierarqcal
version = 0.4.0
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = 
    hierarqcal
    hierarqcal.cirq
    hierarqcal.pennylane
    hierarqcal.qiskit
install_requires =
    requests
    importlib-metadata; python_version < "3.8"
    numpy
    sympy
    matplotlib
    ipykernel
    jupyterlab

[options.extras_require]
cirq = cirq
pennylane = pennylane
qiskit = qiskit[visualization]